--- a/Docker/docker-compose.yaml
+++ b/Docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   db_analizador:
-    image: mysql:5.7
+    image: mariadb
     restart: always
     environment:
       MYSQL_DATABASE: analizador
