--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
     env_file:
       - ./bd.env
     environment:
+      MYSQL_DATABASE: $${MYSQL_DATABASE}
       MYSQL_ROOT_PASSWORD: $${DATABASE_PASSWORD}
     volumes:
       - ./data:/var/lib/mysql
