--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,10 +8,10 @@ services:
       context: ./app
       dockerfile: Dockerfile
     env_file:
-      - ./app.env
+      - app.env
     environment:
-      SECRET_KEY: $${SECRET_KEY}
-      DATABASE_PASSWORD: $${DATABASE_PASSWORD}
+      SECRET_KEY: ${SECRET_KEY}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     image: analizador:1.0
     restart: always
     container_name: app
@@ -19,19 +19,29 @@ services:
       - ./app/proyectoPrograSegura:/app
     depends_on:
       - bd
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: "1024M"
 
     
   bd:
-    image: mariadb
+    image: mariadb:10.8.3
     container_name: bd-A
     restart: always
     env_file:
-      - ./bd.env
+      - bd.env
     environment:
-      MYSQL_DATABASE: $${MYSQL_DATABASE}
-      MYSQL_ROOT_PASSWORD: $${DATABASE_PASSWORD}
+      MYSQL_DATABASE: analizador
+      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
       - ./data:/var/lib/mysql
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: "1024M"
 
   nginx:
     image: nginx
@@ -46,3 +56,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    deploy:
+      resources:
+        limits:
+          cpus: "2"
+          memory: "1024M"
