--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     build:
       args:
         user: seguro
+        uid: 1001
       context: ./app
       dockerfile: Dockerfile
     env_file:
@@ -17,6 +18,8 @@ services:
     container_name: app-A
     volumes:
       - ./app/proyectoPrograSegura:/app
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /sys/fs/cgroup/:/sys/fs/cgroup:ro
     depends_on:
       - bd
     deploy:
