--- a/app/proyectoPrograSegura/tareas/entregadas/docker-compose.yaml
+++ b/app/proyectoPrograSegura/tareas/entregadas/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   tarea:
-    image: nginx
+    image: bash
     volumes:
-      - ./code: /home/sica
+      - ./code:/home/sica
       
