Arreglé el evaluador

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
     env_file:
       - app.env
     environment:
-      SECRET_KEY: ${SECRET_KEY}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      SECRET_KEY: $${SECRET_KEY}
+      DATABASE_PASSWORD: $${DATABASE_PASSWORD}
     image: analizador:1.0
     restart: always
     container_name: app-A
@@ -36,7 +36,7 @@ services:
       - bd.env
     environment:
       MYSQL_DATABASE: analizador
-      MYSQL_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: $${DATABASE_PASSWORD}
     volumes:
       - ./data:/var/lib/mysql
     deploy:
